k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mianatra
  labels:
    app.kubernetes.io/name: mianatra-ingress
    app.kubernetes.io/component: ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "30m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mianatra-backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mianatra-frontend
                port:
                  name: http
